--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
-.env
-*venv
-__pycache__/
-db.sqlite3
+node_modules
 
-.pytest_cache
+# Output
+.output
+.vercel
+.netlify
+.wrangler
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+__pycache__/
+
+*venv/
+
+
+*.sqlite3
